# SosediTestTask

./: .env.dev  Dockerfile  README.md  docker-compose.yaml  install.sh  pyproject.toml  ruff.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
deployments/redis/: redis.conf
highlights/: endpoints.py  models.py  repository.py  serializers.py  service.py  urls.py
highlights/management/commands/: createtestcollections.py
highlights/migrations/: 0001_initial.py  0002_alter_collection_options_alter_collection_sort.py
shared/: __init__.py  base_model.py  base_repository.py
shared/bitrix_cli/: banners.py  base.py
